add rupture jeet typographic, split styl files, fix copy for fonts

--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "std-web-tpl-3g",
   "version": "0.2.0",
   "description": "Standart web template 3G",
-  "keywords": "grunt, bower, template, 3g, standart, html, jade, stylus",
+  "keywords": "grunt, bower, template, 3g, standart, html, jade, stylus, rupture, jeet",
   "author": "German Gurov",
-  "homepage":"http://3ginger.com",
+  "homepage": "http://3ginger.com",
   "main": "src/",
   "devDependencies": {
+    "canvas": "^1.2.1",
     "grunt": "^0.4.4",
     "grunt-autoprefixer": "^0.7.3",
     "grunt-bower-concat": "^0.4.0",
