--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,9 @@
     "underscore": "~1.6.0",
     "modernizr": "~2.8.2",
     "jquery": "~2.1.1",
-    "normalize.css": "~3.0.2"
+    "normalize.css": "~3.0.2",
+    "rupture-by-jenius": "~0.6.1",
+    "typographic": "*",
+    "jeet": "~6.1.2"
   }
 }
