--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,7 @@
     "jquery": "~2.1.1",
     "normalize.css": "~3.0.2",
     "rupture-by-jenius": "~0.6.1",
-    "typographic": "*",
+    "typographic": "1.1.0",
     "jeet": "~6.1.2"
   }
 }
